Made scales more legible on XY charts.

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -568,8 +568,8 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 	// ctx.closePath();
 	ctx.stroke();
 	ctx.lineWidth = 1;
-	ctx.font = "5pt Courier";
-	ctx.strokeText(XYLabels[0],TopLeft[0]+(SizeXY[0]/2),TopLeft[1]+SizeXY[1]+20);
+	ctx.font = "6pt Courier";
+	ctx.strokeText(XYLabels[0],TopLeft[0]+(SizeXY[0]/2),TopLeft[1]+SizeXY[1]+28);
 	ctx.strokeText(Max,TopLeft[0]+8,TopLeft[1]);
 	for(x=0;x<=ValueSeries1.length-1;x++)
 	{
@@ -589,7 +589,7 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 		ctx.stroke();
 		ctx.globalAlpha = 1.0;
 		ctx.strokeStyle = "black";
-		ctx.strokeText(x,TopLeft[0]+(XScale*x),TopLeft[1]+SizeXY[1]+10);
+		ctx.strokeText(x,TopLeft[0]+(XScale*x),TopLeft[1]+SizeXY[1]+(x%2?10:18));
 	}
 	
 	ctx.globalAlpha = 1.0;
