Data directories were incorrect.. fixed. (oops..)

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -43,9 +43,9 @@
 
 </body>
 
-<script src=Borders/USBorders.js></script>
-<script src=Borders/Cities.js></script>
-<script src=Ext/USAData.js></script>
+<script src=USBorders.js></script>
+<script src=Cities.js></script>
+<script src=USAData.js></script>
 
 <script>
 
