--- a/covid19usa.html
+++ b/covid19usa.html
@@ -46,6 +46,7 @@
 <script src=USBorders.js></script>
 <script src=Cities.js></script>
 <script src=USAData.js></script>
+<script src=USAData_60.js></script>
 
 <script>
 
