Updated data to 05/22/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -47,6 +47,7 @@
 <script src=Cities.js></script>
 <script src=USAData.js></script>
 <script src=USAData_60.js></script>
+<script src=USAData_61.js></script>
 
 <script>
 
