--- a/covid19state.html
+++ b/covid19state.html
@@ -35,6 +35,7 @@
 <script src=USAData.js></script>
 <script src=USAData_60.js></script>
 <script src=USAData_61.js></script>
+<script src=USAData_62.js></script>
 
 <script>
 
