--- a/covid19usa.html
+++ b/covid19usa.html
@@ -48,6 +48,7 @@
 <script src=USAData.js></script>
 <script src=USAData_60.js></script>
 <script src=USAData_61.js></script>
+<script src=USAData_62.js></script>
 
 <script>
 
