--- a/covid19state.html
+++ b/covid19state.html
@@ -36,6 +36,7 @@
 <script src=USAData_60.js></script>
 <script src=USAData_61.js></script>
 <script src=USAData_62.js></script>
+<script src=USAData_63.js></script>
 
 <script>
 
