--- a/covid19usa.html
+++ b/covid19usa.html
@@ -50,6 +50,7 @@
 <script src=USAData_61.js></script>
 <script src=USAData_62.js></script>
 <script src=USAData_63.js></script>
+<script src=USAData_64.js></script>
 
 <script>
 
