Updated data to 05/26/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -51,6 +51,7 @@
 <script src=USAData_62.js></script>
 <script src=USAData_63.js></script>
 <script src=USAData_64.js></script>
+<script src=USAData_65.js></script>
 
 <script>
 
