--- a/covid19state.html
+++ b/covid19state.html
@@ -38,6 +38,7 @@
 <script src=USAData_62.js></script>
 <script src=USAData_63.js></script>
 <script src=USAData_64.js></script>
+<script src=USAData_65.js></script>
 
 <script>
 
