Date updated to 05/29/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -54,6 +54,7 @@
 <script src=USAData_65.js></script>
 <script src=USAData_66.js></script>
 <script src=USAData_67.js></script>
+<script src=USAData_68.js></script>
 
 <script>
 
