Updated date to 05/30/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -55,6 +55,7 @@
 <script src=USAData_66.js></script>
 <script src=USAData_67.js></script>
 <script src=USAData_68.js></script>
+<script src=USAData_69.js></script>
 
 <script>
 
