--- a/covid19state.html
+++ b/covid19state.html
@@ -42,6 +42,7 @@
 <script src=USAData_66.js></script>
 <script src=USAData_67.js></script>
 <script src=USAData_68.js></script>
+<script src=USAData_69.js></script>
 
 <script>
 
