--- a/covid19usa.html
+++ b/covid19usa.html
@@ -56,6 +56,7 @@
 <script src=USAData_67.js></script>
 <script src=USAData_68.js></script>
 <script src=USAData_69.js></script>
+<script src=USAData_70.js></script>
 
 <script>
 
