--- a/covid19usa.html
+++ b/covid19usa.html
@@ -57,6 +57,7 @@
 <script src=USAData_68.js></script>
 <script src=USAData_69.js></script>
 <script src=USAData_70.js></script>
+<script src=USAData_71.js></script>
 
 <script>
 
