Updated data to 06/02/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -58,6 +58,7 @@
 <script src=USAData_69.js></script>
 <script src=USAData_70.js></script>
 <script src=USAData_71.js></script>
+<script src=USAData_72.js></script>
 
 <script>
 
